# kfilter

./: CHANGELOG.md  Cargo.toml  LICENSE  README.md  error.txt
.github/workflows/: pull-request.yml  push-checks.yml  release-please.yml
examples/: kf.rs  kf_input.rs  kf_no_input.rs  kf_nonlinear.rs
src/: kalman.rs  lib.rs  measurement.rs  system.rs
