[package]
name = "kfilter"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
num-traits = "0.2.19"
plotters = "0.3.3"
rand = "0.8.5"
rand_distr = "0.4.3"
# freetype-sys = { version = "0.21", features = ["bundled"] }

[[bin]]
name = "demo"
path = "bin/demo.rs"
