[package]
name = "kfilter"
version = "0.1.0"
edition = "2021"
authors = ["Dom Wilson"]
description = "A no-std implementation of the Kalman and Extended Kalman Filter."
license = "MIT"
repository = "https://github.com/dw-labs-org/kfilter"
keywords = [
    "Kalman Filter",
    "Extended Kalman Filter",
    "State estimation",
    "Estimator",
    "Filtering",
]
categories = [
    "aerospace",
    "algorithms",
    "embedded",
    "no-std",
    "science::robotics",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
