[package]
name = "kfilter"
version = "0.2.2"
edition = "2021"
authors = ["Dom Wilson"]
description = "A no-std implementation of the Kalman and Extended Kalman Filter."
license = "MIT"
repository = "https://github.com/dw-labs-org/kfilter"
keywords = [
    "kalman_filter",
    "extended_kalman",
    "state_estimation",
    "estimator",
    "filtering",
]
categories = [
    "aerospace",
    "algorithms",
    "embedded",
    "no-std",
    "science::robotics",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
nalgebra = "0.33.0"
rand = "0.8.5"
rand_distr = "0.4.3"
serde = { version = "1.0.204", features = ["derive"], optional = true }

[features]
serde = ["dep:serde", "nalgebra/serde-serialize"]
